<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_primary_accent_tansparent_up"
    android:orientation="vertical"
    tools:context="com.example.nikis.bludogramfirebase.Login.LoginActivity">


    <TextView
        android:id="@+id/textView7"
        style="@style/TextViewWhiteTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/md_grey_300"
        android:text="Welcome to the \nChef's Club!"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/verification_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:fragment="com.example.nikis.bludogramfirebase.VerificationFragment">

            <ImageButton
                android:id="@+id/btn_back"
                style="@style/BaseNavigateImageButton.NavigateBackImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_code"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:focusedByDefault="true"
                tools:targetApi="o" />

            <ImageButton
                android:id="@+id/btn_startVerificationWithCode"
                style="@style/BaseNavigateImageButton.NavigateNextImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_resend"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:focusedByDefault="true"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextViewWhiteTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:text="@string/status"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_code"
                style="@style/WhiteEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/tv_timer"
                android:ems="10"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_resend"
                style="@style/BaseAppButtonLight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/edt_code"
                android:layout_alignBottom="@+id/edt_code"
                android:layout_alignParentEnd="true"
                android:enabled="false"
                android:text="@string/resend_phone_auth" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_resend"
                android:layout_alignBottom="@+id/edt_code"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/btn_resend"
                android:gravity="center"
                android:text="00"
                android:textColor="@color/grey_300"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/enter_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/edt_phone"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:text="+7"
                android:lines="1"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btn_startVerification"
                style="@style/BaseNavigateImageButton.NavigateNextImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/other_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/md_red_900"
            android:text="@string/preview_info" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
